# attack-planner

./: .env  .gitignore  README.md  attcp-pe.code-workspace  pyproject.toml  requirements.txt
app/: __main__.py  advanced_filtering.py  app.py  cli.py  data_fetcher.py  filtering.py  logger.py  logs_display.py  main.py  payload_generator.py  persistent_state.py  reset_handler.py  threat_s_lit.py
app/data/Red Team Operations/: 1649181144876.txt  AWAE Prep.txt  Bug Bounty Testing Essential Guideline.txt  E-Learn ExDev Slides.txt  E-Learn ExDev.txt  Hunting.txt  Kiwi Module.txt  OSCE3.txt  RT Practcial Guide.txt  User_Manual.txt  Web Ops Crew Aid.txt  attackingnetworkprotocols_ebook.txt  black_hat_rust.txt  blackhatgo.txt  cb9a9a15-fcd8-4109-815b-466b2b5b1e98.txt  cpluspluscrashcourse.txt  cti_notes.txt  exp-301.txt  pen-300.txt  rootkitsandbootkits.txt  seriouscrytography.txt  web-300.txt  wstg-v4.2.txt
app/data/Rust/: asynchronousprogramminginrust.txt  blazorwebassemblybyexample2e.txt  creativediymicrocontrollerprojectswithtinygoandwebassembly.txt  creativeprojectsforrustprogrammers.txt  gamedevelopmentwithrustandwebassembly.txt  hands-onconcurrencywithrust.txt  hands-ondatastructuresandalgorithmswithrust.txt  hands-ongamedevelopmentwithwebassembly.txt  hands-onmicroserviceswithrust.txt  practicalsystemprogrammingforrustdevelopers.txt  rustprogrammingbyexample.txt  rustprogramminglanguagerust2018.txt  rustquickstartguide.txt  rustwebprogramming.txt  speedupyourpythonwithrust.txt
app/data/Sysadmin/: bashcookbook2ndedition.txt  (+16 more)
app/prompts/: __init__.py  prompt.py
(+5 files in other folders)
